Run tests in CI via bundle

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,4 @@ jobs:
         with:
           bundler-cache: true
       - name: Run tests
-        run: rake test
+        run: bundle exec rake test
