Add ControlInterface getter wrappers for app, doc_root and wrangler that raise with a useful error if nil
Add a better js eval to WebWrangler, and a DOMWrangler that uses it. Optimise heartbeat handlers for fewer JS calls.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -38,3 +38,12 @@ Style/CaseEquality:
 
 Style/RedundantConstantBase:
   Enabled: false
+
+Style/EmptyElse:
+  Enabled: false
+
+Metrics/BlockNesting:
+  Enabled: false
+
+Layout/EmptyLinesAroundExceptionHandlingKeywords:
+  Enabled: false
