--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
----
 name: CI
 on:
   push:
@@ -12,6 +11,7 @@ jobs:
   tests:
     name: Tests
     runs-on: macos-latest
+    timeout-minutes: 10 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -21,9 +21,11 @@ jobs:
           bundler-cache: true
       - name: Run tests
         run: CI_RUN='true' bundle exec rake test
+
   linter:
     name: Linter
     runs-on: macos-latest
+    timeout-minutes: 10
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
