okay para kinda working but commit before this everything was working
Signed-off-by: Nick Schwaderer <nick.schwaderer@shopify.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,9 @@ Layout/LineLength:
 Style/MethodCallWithArgsParentheses:
   Enabled: false
 
+Style/GlobalVars:
+  Enabled: false
+
 Style/CommandLiteral:
   Enabled: false
 
