--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
   tests:
     name: Tests
     runs-on: macos-latest
+    timeout-minutes: 10 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -24,6 +25,7 @@ jobs:
   linter:
     name: Linter
     runs-on: macos-latest
+    timeout-minutes: 10 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
