Rework how I handle logging for failing tests.
Add convenience class for logging failures outside test_scarpe_code.
Logs weren't getting uploaded as build artifacts - fix in workflow.
Mention a failure in CI I'm still tracking down.

For GHActions fix, see: https://stackoverflow.com/questions/58858429/how-to-run-a-github-actions-step-even-if-the-previous-step-fails-while-still-f

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,11 @@ jobs:
       - name: Run tests
         run: CI_RUN='true' bundle exec rake test
       - name: upload test-fail logs
+        if: '!cancelled()'
         uses: actions/upload-artifact@v3
         with:
           name: test failure logs
-          path: logger/test_failure_*_out.log
+          path: logger/test_failure*.out.log
   linter:
     name: Linter
     runs-on: macos-latest
