Improve test-fail logs
Save them in GitHub Actions CI
Don't report logs from non-failing tests
Use test names, not integer offsets, in file names
Fail a test if multiple results are returned

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,11 @@ jobs:
           bundler-cache: true
       - name: Run tests
         run: CI_RUN='true' bundle exec rake test
+      - name: upload test-fail logs
+        uses: actions/upload-artifact@v3
+        with:
+          name: test failure logs
+          path: logger/test_failure_*_out.log
   linter:
     name: Linter
     runs-on: macos-latest
