--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Install dependencies
-        run: sudo apt-get -y install libportaudio2 libgtk-3-dev libwebkit2gtk-4.0-dev
+        run: sudo apt-get -y install portaudio19-dev libgtk-3-dev libwebkit2gtk-4.0-dev
       - name: Setup Ruby
         uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
         with:
