--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -43,21 +43,15 @@ jobs:
         run: rm -rf .yardoc doc && bundle exec yardoc -o doc
         env:
           FAKE_ENV: example
-      - name: Upload artifact
-        # Automatically uploads an artifact from the './_site' directory by default
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: ./doc
-
-  # Deployment job
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+      - name: turn built dir into pages branch
+        run: |
+          set -e
+          set -x
+          git switch --orphan new_pages_branch
+          mv doc/* .
+          git add .
+          git commit -m "Docs build"
+          git checkout pages
+          git reset --hard new_pages_branch
+          git push -f origin pages
 
