--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,11 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
-      - name: Run tests
+      - name: Run Lacci tests
+        run: CI_RUN='true' bundle exec rake lacci_test
+      - name: Run Scarpe-Component tests
+        run: CI_RUN='true' bundle exec rake component_test
+      - name: Run Scarpe tests
         run: CI_RUN='true' bundle exec rake test
       - name: upload test-fail logs
         if: '!cancelled()'
