Expand the asset server to serve app files and scarpe-components files. Add Tiranti assets locally.
Also fix some unit tests that didn't work with Tiranti as renderer.

All of this should help make it easy to switch to Tiranti by default.

--- a/scarpe-components/Gemfile
+++ b/scarpe-components/Gemfile
@@ -8,11 +8,14 @@ gem "lacci", path: "../lacci"
 
 gem "rake", "~> 13.0"
 
-gem "nokogiri"
+#gem "nokogiri"
 
 group :test do
   gem "minitest", "~> 5.0"
   gem "minitest-reporters"
+
+  # Dependencies for specific components being tested
+  gem "webrick"
 end
 
 group :development do
