Fix Homebrew dirs for GitHub changing over to ARM-based OSX workers; For top-level Scarpe tests, including TestSSpecInfrastructure, use a new clean sspec.json file instead of reusing the same filename; avoid stale results

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Install dependencies
         run: brew install pkg-config portaudio
+      - name: Configure library dirs from Homebrew for gems w/ native extensions
+        run: bundle config build.bloops --with-portaudio-dir=`brew --prefix portaudio`
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Setup Ruby and install gems
